kubernetes/apps/tautulli/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  namespace: tautulli
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: tautulli
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tautulli
    spec:
      containers:
        - name: tautulli
          image: ghcr.io/tautulli/tautulli:v2.18.2
          readinessProbe:
            tcpSocket:
              port: 8181
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8181
            periodSeconds: 30
            failureThreshold: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
          ports:
            - name: web
              containerPort: 8181
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tautulli-config
