kubernetes/apps/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: tautulli
spec:
  selector:
    app.kubernetes.io/name: tautulli
  ports:
    - name: web
      port: 8181
      targetPort: 8181
